# nominal-client

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  check_normalize_video.py  client_demo.ipynb  downloader.py  example.ipynb  flake.nix  frame_transforms.py  greptile.json  justfile  log.txt  migration_state.json  mkdocs.yml  pyproject.toml  release-please-config.json  skills-lock.json  stream.py  stream_test.py  video_cli_examples.md  wb_test.py  wb_test_state.json
.agents/skills/reviewing-nominal-api-bumps/: SKILL.md  bump_scan.py  diff_surface.py  extract_surface.py  render_html.py  report.css  serve_report.py
.claude/skills/: reviewing-nominal-api-bumps
.github/: .release-please-manifest.json  pull_request_template.md  release-please-config.json
.github/workflows/: auto-merge-release-please.yml  build-check-test.yml  build-deploy-docs.yml  build-docs.yml  claude-code-review.yml  claude-review.yml  claude.yml  deploy-docs.yml  e2e-tests.yml  lint-pr-title.yml  publish-pypi.yml  publish-pypi.yml.disabled  py-lint.yml  python-package.yml  release-please.yml
data/: penguins.csv
docs/: generate.py  index.md  mkdocs.yml
docs/css/: mkdocstrings.css  slate-muted.css
docs/reference/: core.md  exceptions.md  index.md  nom-cli.md  toplevel.md  ts.md
docs/src/: index.md  networking-tls.md
docs/src/css/: mkdocstrings.css  (+1 more)
docs/usage/: examples.md
examples/containerized-extractor-ci/: README.md  deploy_containerized_extractor.py  extractor-config.example.json  github-actions.yml  gitlab-ci.yml
nominal/: __init__.py  __main__.py  _checklist.py  _config.py  _multipart.py  _tdms.py  _timeutils.py  _utils.py  _workbook.py  checks.py  client.py  config.py  core.py  exceptions.py  metrics.py  nominal.py  nominal_conjure.py  sdk.py  timedomain.py  ts.py  utils.py  working.py
nominal/_utils/: README.md  __init__.py  api_tools.py  dataclass_tools.py  deprecation_tools.py  download_tools.py  iterator_tools.py  multipart_downloader.py  pagination_tools.py  process_tools.py  streaming_tools.py  threading_tools.py  timing_tools.py  typing_tools.py
nominal/auth/: __init__.py
nominal/cli/: __init__.py  __main__.py  _utils.py  attachment.py  auth.py  config.py  container.py  container_image.py  container_registry.py  containerized_extractor.py  dataset.py  download.py  flow.py  mis.py  nom.py  run.py  video.py
nominal/cloud/: __init__.py
nominal/compute/: __init__.py
nominal/config/: __init__.py  _config.py
nominal/core/: __init__.py  _api_types.py  _batch_processor.py  _batch_processor_proto.py  _checklist_types.py  _client.py  _clientsbunch.py  _columnar_write.proto  _columnar_write_pb2.py  _columnar_write_pb2.pyi  _conjure_utils.py  _constants.py  _datasource_types.py  _event_types.py  _export_utils.py  _grpc.py  _ingest_flow.py  _metrics.py  _multipart.py  _networking.py  _queueing.py  _types.py  _utils.py  _video_types.py  asset.py  attachment.py  batch_processor.py  batch_processor_proto.py  bounds.py  channel.py  channel_v2.py  checklist.py  client.py  comment.py  connection.py  container_image.py  containerized_extractor.py  containerized_extractors.py  data_review.py  data_scope_container.py  (+38 more)
nominal/data/: __init__.py
nominal/exceptions/: __init__.py
nominal/experimental/: __init__.py  impersonation.py
nominal/io/: __init__.py  _utils.py  config.py  ts.py
nominal/network/: __init__.py  gzip_requests_adapter.py  gzip_requests_client.py  nominal_session.py
nominal/smartcard/: __init__.py  _cert_selection.py  _config.py  _dependencies.py  _errors.py  _openssl_provider.py  _pkcs11.py  _session.py  _transport.py  errors.py
nominal/ts/: __init__.py
nominal/utilities/: __init__.py
scripts/: build_protos.py  generate_and_ingest_edge_cases.py  transfer_workbook_template.py
src/: __init__.py  nominal.py  utils.py
tests/: conftest.py  test_cli_download.py  test_containerized_env_inputs.py  test_deprecation_tools.py  test_iterator_tools.py  test_proto_bindings.py  test_rust_write_stream.py  test_toplevel.py  test_ts.py  test_unified_streaming.py  test_write_stream.py
tests/cli/: test_auth.py  test_config_cli.py  test_container_config.py  test_container_registry.py  test_containerized_extractor.py  test_format.py  test_migrate_summary_cli.py  test_verify_connection.py  test_video_cli.py
tests/compute/: test_compute_series.py  test_derived_datasets.py  test_dsl.py
tests/config/: test_config.py
tests/core/: test_asset.py  test_asset_migrator.py  test_attachment_migrator.py  test_channel.py  test_channel_filter.py  test_channel_sync.py  test_channel_sync_cli.py  test_channel_sync_detect.py  test_client_search.py  test_client_transport_profile.py  test_client_units.py  test_client_user.py  test_client_workspaces.py  test_clientsbunch.py  test_comment.py  test_conjure_clone_utils.py  test_container_image.py  test_container_registry.py  test_containerized_extractor.py  test_dataclass_tools.py  test_dataset.py  test_dataset_add_containerized.py  test_dataset_add_video.py  test_dataset_file.py  test_datasource.py  test_event.py  test_experimental_dataset_utils.py  test_file_utils.py  test_filenames.py  test_filetype.py  test_frontend_urls.py  test_get_or_create_asset.py  test_grpc.py  test_ingestion_job.py  test_migration_demo_workbooks.py  test_migration_destination_client_resolution.py  test_migration_preregister.py  test_migration_preregister_cli.py  test_migration_source_assets.py  test_migration_state_persistence.py  (+27 more)
tests/e2e/: __init__.py  conftest.py  test_containerized_extractor_registry.py  test_core.py  test_http_shim.py  test_runs.py  test_sdk.py  test_search.py  test_search_dataset_files.py  test_timestamps.py  test_toplevel.py  test_workspace_resolution.py
tests/experimental/: test_compute_series.py  test_derived_datasets.py  test_extractor.py  test_video_conversion.py
tests/smartcard/: _helpers.py  test_cert_selection.py  test_dependencies.py  test_openssl_provider.py  test_pkcs11.py  test_session.py  test_transport.py
(+286 files in other folders)
