[project]
name = "nominal"
version = "1.147.0"
description = "Automate Nominal workflows in Python"
authors = [
    { name = "Alexander Reynolds", email = "alex.reynolds@nominal.io" },
    { name = "Alexander Hill", email = "alex.hill@nominal.io" },
    { name = "JP", email = "jack@nominal.io" },
    { name = "Michael Bauer", email = "michael@nominal.io" },
    { name = "Drake Eidukas", email = "drake@nominal.io" },
]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.10,<4"
dependencies = [
    "conjure-python-client>=3.1.0,<4",
    "exceptiongroup>=1.3.0",
    "nominal-api==0.1259.1",
    "truststore>=0.10.4",
    "typing-extensions>=4,<5",
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    # urllib3>=2.7.0 fixes CVE-2026-21441, CVE-2026-44431
    "urllib3>=2.7.0",
    "ffmpeg-python>=0.2.0",
    # CLI dependencies
    "click>=8,<9",
    "rich>=14.1.0",
    "tabulate>=0.9.0,<0.10",
    # To be conservative and prevent installation of the rest of the package on exotic architectures, we explicitly
    # list only the exact platforms supported
    # TODO(drake): support more architectures and clean up dependency markers.
    "nominal-streaming==0.8.2; platform_python_implementation=='CPython' and ((sys_platform=='win32' and platform_machine=='AMD64') or (sys_platform=='darwin' and platform_machine=='arm64') or (sys_platform=='linux' and (platform_machine=='x86_64' or platform_machine=='armv7l' or platform_machine=='aarch64' or platform_machine=='arm64')))",
]


[project.urls]
Homepage = "https://nominal.io"
Documentation = "https://docs.nominal.io"
Repository = "https://github.com/nominal-io/nominal-client"

[tool.uv]
default-groups = ["dev"]

# Resolution overrides are only honored at the workspace root, not in member packages.
override-dependencies = [
    # waitress<3.0.1 has CVEs (CVE-2024-49768/49769); ouster-sdk pulls it in transitively in nominal-ouster.
    # the CVE is explicitly ignored as this breaks support for python 3.8 in ouster-sdk, but we don't support python <3.10
    "waitress>=3.0.1"
]

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "coverage[toml]>=7.0.0",
    "mkdocs-click>=0.9.0",
    "mkdocs-material>=9.5.34,<10",
    "mkdocs>=1.6.1,<2",
    "mkdocstrings-python>=1.16.10,<2",
    "mkdocstrings>=0.29.1,<1",
    "mypy>=1.18.2,<2",
    "pandas-stubs~=2.0",
    "pytest-cov>=5.0.0,<6",
    "pytest>=8.3.2,<9",
    "ruff==0.12.1",
    "types-protobuf>=4.24.0.20240311,<5",
    "types-python-dateutil>=2.9.0.20250822",
    "types-pyyaml>=6.0.12.20240808,<7",
    "types-requests>=2.32.0.20240712,<3",
    "types-tabulate>=0.9.0.20241207,<0.10",
]

[tool.uv.sources]
nominal = { workspace = true }
nominal-tdms = { workspace = true }
nominal-ouster = { workspace = true }

[project.optional-dependencies]
mis = ["openpyxl>=3.1.0"]
protos = ["nominal-api-protos>=0.1090.0"]
tdms = ["nominal-tdms>=1.143.0"]
ouster = ["nominal-ouster>=1.146.0"]
# To be conservative and prevent installation on unsupported architectures, we explicitly list only the exact platforms supported.
video = [
    "nominal-video==0.1.9; platform_python_implementation=='CPython' and ((sys_platform=='win32' and platform_machine=='AMD64') or (sys_platform=='darwin' and platform_machine=='arm64') or (sys_platform=='linux' and (platform_machine=='x86_64' or platform_machine=='aarch64')))",
]

[project.scripts]
nom = 'nominal.cli:nom'
nominal = 'nominal.cli:nom'
nom-migrate = 'nominal.experimental.migration.migration_cli:migrate_cmd'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["README.md", "LICENSE", "NOTICE", "CHANGELOG.md", "nominal/*"]
exclude = ["packages/**"]

[tool.hatch.build.targets.wheel]
include = ["README.md", "LICENSE", "NOTICE", "CHANGELOG.md", "nominal/*"]
exclude = ["packages/**"]

[tool.ruff]
line-length = 120
# One shared lint/format config covers the core package (nominal/**), every
# workspace sub-package source + co-located tests (packages/**), and the root
# tests (tests/**). Sub-packages intentionally do not define their own ruff
# config so style stays uniform across the workspace.
include = ["nominal/**/*.py", "packages/**/*.py", "tests/**/*.py"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
# See rules and codes: https://docs.astral.sh/ruff/rules/
select = [
    "F",    # pyFlakes
    "E",    # pycodestyle (Err)
    "W",    # pycodestyle (Warn)
    "D",    # pyDocstyle
    "I001", # Isort
    "FIX",  # Flake8-FIXme
    "PL",   # PyLinT
    "NPY",  # NumPY
    "T100", # debugger
]

extend-select = [
    "D417", # no missing arguments
]
ignore = [
    "D100",    # missing-module-docstring
    "D101",    # missing-public-class-docstring
    "D102",    # missing-public-method-docstring
    "D103",    # missing-class-docstring
    "D104",    # missing-package-docstring
    "D203",    # one-blank-line-before-class
    "D205",    # 1 blank line between summary and description
    "D213",    # multiline-summary-docs
    "D400",    # doc line ends in period
    "D401",    # imperative mood
    "D415",    # doc line ends in punctuation
    "FIX002",  # Ignore TODOs
    "PLC0415", # import should be at top-level of a file
    "PLR0913", # too many arguments
    "PLR2004", # magic values
    "PLW0603", # globals
]

[tool.ruff.lint.per-file-ignores]
"nominal/core/dataset.py" = [
    "E501", # allow long lines for avro schema in docstring
]

[tool.mypy]
strict = true
# These are checked as *installed* namespace packages (one shared `nominal`
# namespace split across distributions). Two consequences for sub-packages:
#   1. Each `nominal.*` sub-package must be listed here explicitly — mypy does
#      not auto-discover namespace sub-packages from the top-level entry.
#   2. Each sub-package must ship a `py.typed` marker (PEP 561) in its build
#      `include`, or mypy aborts with "cannot be type checked due to missing
#      py.typed marker" (see packages/nominal-*/pyproject.toml).
packages = ["nominal", "nominal.tdms", "nominal.ouster"]

[[tool.mypy.overrides]]
module = "nominal_api.*"
implicit_reexport = true
no_implicit_optional = false
disable_error_code = ["no-any-return", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "nptdms"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ffmpeg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nominal_video"
ignore_missing_imports = true

# ouster-sdk ships a py.typed marker, but its package __init__ files pull public
# symbols (ChanField, XYZLut, PcapScanSource, ...) in via `from .data import X`
# with no __all__, so strict mode's no-implicit-reexport rejects
# `from ouster... import X`. Allow implicit re-export (as we do for nominal_api).
[[tool.mypy.overrides]]
module = "ouster.*"
ignore_missing_imports = true
implicit_reexport = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def"]

[tool.pytest.ini_options]
filterwarnings = [
    "error", # transform all warnings into errors, except ignore: ones.
]
# Tests are co-located with each workspace package. List every package's tests
# dir here so a single `uv run pytest` (what `just test` and CI run) validates
# the whole workspace. Co-located test dirs must NOT contain an __init__.py —
# otherwise they become a second importable package literally named `tests` and
# collide with the root tests package. Add a new line here per package that
# grows a tests/ dir.
testpaths = ["tests", "packages/nominal-ouster/tests"]
# make tests/e2e opt-in (they require a Nominal instance)
norecursedirs = ["tests/e2e"]
# importlib mode is the recommended pytest layout for a monorepo: with no
# __init__.py in test dirs, each test module gets a unique, rootdir-relative
# name, so same-named test files across packages (e.g. two test_client.py) can
# never shadow each other the way the default "prepend" mode would.
addopts = "--import-mode=importlib --cov=nominal --cov-branch --cov-report=html --cov-report=term"

[tool.coverage.run]
omit = ["tests/*", "*__init__*", "nominal/__main__.py"]

[tool.pyright]
typeCheckingMode = "off"
